Setup connection to MongoDB Atlas, basically implement create todo

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -22,15 +22,17 @@
         <button type="submit"><span class="fas fa-plus"></span></button>
       </form>
       <ul class="todo-list">
+        <% todoTasks.forEach(details => { %>
         <li class="todo-list-item">
-          <div class="todo-list-item-name">Some Text</div>
-          <a href="" class="edit">
+          <div class="todo-list-item-name"><%= details.content %></div>
+          <a href="/edit/<%= details._id %>" class="edit">
             <span class="fas fa-edit"></span>
           </a>
-          <a href="" class="remove">
+          <a href="/remove/<%= details._id %>" class="remove">
             <span class="fas fa-times"></span>
           </a>
         </li>
+        <% }) %>
       </ul>
     </div>
   </div>
