Implement basic authentication flow

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -17,7 +17,7 @@
   <div class="todo-container">
     <h2>To-Do List</h2>
     <div class="todo">
-      <form action="/" method="POST" class="todo-header">
+      <form action="/todos" method="POST" class="todo-header">
         <input type="text" name="content" />
         <button type="submit"><span class="fas fa-plus"></span></button>
       </form>
@@ -25,10 +25,10 @@
         <% todoTasks.forEach(details => { %>
         <li class="todo-list-item">
           <div class="todo-list-item-name"><%= details.content %></div>
-          <a href="/edit/<%= details._id %>" class="edit">
+          <a href="todos/edit/<%= details._id %>" class="edit">
             <span class="fas fa-edit"></span>
           </a>
-          <a href="/remove/<%= details._id %>" class="remove">
+          <a href="todos/remove/<%= details._id %>" class="remove">
             <span class="fas fa-times"></span>
           </a>
         </li>
