--- a/views/todoEdit.ejs
+++ b/views/todoEdit.ejs
@@ -17,26 +17,26 @@
   <div class="todo-container">
     <h2>To-Do List</h2>
     <div class="todo">
-      <form action="" method="POST" class="todo-header">
+      <form action="/todos" method="POST" class="todo-header">
         <input type="text" name="content" />
         <button type="submit"><span class="fas fa-plus"></span></button>
       </form>
       <ul class="todo-list">
         <% todoTasks.forEach(details => { %> <% if (details._id == idTask) { %>
         <li class="todo-list-item">
-          <form action="/edit/<%= details._id %>" method="POST">
+          <form action="/todos/edit/<%= details._id %>" method="POST">
             <input type="text" value="<%= details.content %>" name="content" />
             <button type="submit">Confirm</button>
-            <a href="/" class="cancel">Cancel</a>
+            <a href="/todos" class="cancel">Cancel</a>
           </form>
         </li>
         <% } else { %>
         <li class="todo-list-item">
           <div class="todo-list-item-name"><%= details.content %></div>
-          <a href="/edit/<%= details._id %>" class="edit">
+          <a href="todos/edit/<%= details._id %>" class="edit">
             <span class="fas fa-edit"></span>
           </a>
-          <a href="/remove/<%= details._id %>" class="remove">
+          <a href="todos/remove/<%= details._id %>" class="remove">
             <span class="fas fa-times"></span>
           </a>
         </li>
